radio buttons captions spacing fixed

--- a/src/app/components/css/TokenType.css
+++ b/src/app/components/css/TokenType.css
@@ -1,5 +1,5 @@
 .card {
-    width: 50%;
+    width: 800px;
     display: inline-block;
     margin: 2px;
 }
@@ -18,9 +18,14 @@
     background: #f5f5f6;
 }
 
-.typography_token_type {
+.typography_token_type_erc20 {
     padding-top: 16px;
     color: #282b2d !important;
+}
+
+.typography_token_type_erc223 {
+  padding-top: 26px;
+  color: #282b2d !important;
 }
 
 .radio_group_token_type {
